--- a/deploymentservice.yml
+++ b/deploymentservice.yml
@@ -19,7 +19,7 @@ spec:
       containers:
       - name: weberver
         image: hagbesit/webchat:latest
-        ports:80
+        ports:
         - containerPort: 3000
         
         
