--- a/service.yml
+++ b/service.yml
@@ -10,8 +10,8 @@ metadata:
 spec:
   selector: 
     app: jenkins-server
-  type: NodePort  
+  type: webChat  
   ports:
     - port: 8080
       targetPort: 8080
-      nodePort: 3030
+      nodePort: 3000
