--- a/service.yml
+++ b/service.yml
@@ -1,17 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: jenkins-service
-  namespace: devops-tools
-  annotations:
-      prometheus.io/scrape: 'true'
-      prometheus.io/path:   /
-      prometheus.io/port:   '8080'
+  name: jenkins
 spec:
-  selector: 
-    app: jenkins-server
-  type: webChat  
+  type: NodePort  
   ports:
-    - port: 8083
-      targetPort: 8083
-      nodePort: 31989
+    - port: 8080 
+      targetPort: 8080
+  selector:
+    app: jenkins
