--- a/deploymentservice.yml
+++ b/deploymentservice.yml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: jenkins
-        image: webchat/jenkins:lts
+        image: webchat:latest
         ports:
         - name: http-port
           containerPort: 8080
