--- a/jenkins-service.yaml
+++ b/jenkins-service.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: jenkins
-        image: webchat:latest
+        image: jenkins/jenkins
         ports:
         - name: http-port
           containerPort: 8080
